# bip39-wallet-generator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  COMPLETE_POJECT_STRUCTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  WINDOWS_SETUP.MD  wallet_generator.cpp  wallet_generator.h  wallet_generator_impl.cpp  wallet_generator_win.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: build_windows.bat  ci_test.sh  run_tests.bat  run_tests.sh
tests/: Makefile  integration_test.cpp  performance_test.cpp  security_test.cpp  test_framework.h  test_main.cpp
windows/: getopt_win.h  minimal_secp256k1.h
